tests/e2e/mutation_command_index.story
a = {1: "bar"}
b = a values[0]
